--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "nodemon": "^2.0.22",
     "express": "^4.18.2",
     "serialport": "^10.5.0",
     "socket.io": "^4.6.1"
