cambiando licencia a GPL-3.0

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "dependencies": {
     "nodemon": "^2.0.22",
     "express": "^4.18.2",
