--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "GPL-3.0",
   "dependencies": {
-    "nodemon": "^2.0.22",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "serialport": "^10.5.0",
     "socket.io": "^4.6.1"
   }
