agregando datadir folder a gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,5 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+datadir
 # End of https://www.toptal.com/developers/gitignore/api/node
-"
-"
