--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "@babel/core": "^7.21.3",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "tailwindcss": "^3.3.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
